--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -36,7 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@{@string/counter(viewModel.cupsNumberVisibleOnScreen)}"
+            android:text="@{@plurals/main_counter(viewModel.cupsNumberVisibleOnScreen,viewModel.cupsNumberVisibleOnScreen)}"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
